# sdl-game

./: .gitmodules  CMakeLists.txt  doxygen.in  main.cpp
src/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  GameData.cpp  GameData.h  Hand.cpp  Hand.h  IComponent.h  Pointers.h  Scene.cpp  Scene.h
src/render/: HPBar.cpp  HPBar.h  Hand.cpp
